# music_distro_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_GUIDE.md  DEVELOPMENT.md  IMPROVEMENT_SPEC.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  agent.py  classes.py  cleanup_invalid_ids.py  cli  config-audit.md  create_playlists.py  download_emails.py  drop_playlists.py  email_utils.py  helpers.py  library.json  main.py  names.py  playlist_db.py  pyproject.toml  setup_dev.sh  spotify.py  sync_playlists.py
src/: __init__.py  auth_gmail.py  cli.py  config.py  create_playlists.py  email_utils.py  helpers.py  logging_config.py  utils.py
src/agent/: __init__.py  agent.py  exceptions.py
src/classes/: __init__.py  classes.py
src/db/: __init__.py  playlist_db.py
src/services/: __init__.py  email_processor.py  spotify_service.py
src/spotify/: __init__.py  spotify.py
test_email/: attach_test.txt
tests/: conftest.py  test_config.py  test_database.py  test_models.py
