[project]
name = "spotify"
version = "0.1.0"
description = "Automated Spotify playlist creation from Boomkat emails using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dotenv>=0.9.9",
  "flask>=3.1.2",
  "google-api-python-client>=2.187.0",
  "google-auth-httplib2>=0.2.1",
  "google-auth-oauthlib>=1.2.3",
  "httpx>=0.28.1",
  "langchain>=1.1.2",
  "langchain-anthropic>=1.2.0",
  "pydantic-settings>=2.12.0",
  "alembic>=1.13.0",
  "pytest>=9.0.2",
  "click>=8.3.1",
]

[project.scripts]
spotify-automation = "src.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pre-commit>=3.6.0",
  "bandit>=1.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
  "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG", "S101"]  # allow unused args and asserts in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used
